[package]
name = "xar"
version = "0.1.0"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"
description = "A utility and library to create, inspect and extract XAR archives."
documentation = "https://docs.rs/xar"
homepage = "https://github.com/xfbs/xar"
repository = "https://github.com/xfbs/xar"
readme = "README.md"
keywords = ["xar", "compression"]
categories = ["command-line-utilities", "compression", "encoding"]
license = "MIT"

[dependencies]
xml-rs = "0.8.0"
libflate = "0.1.23"
byteorder = "1.3.1"
clap = "2.33.0"
error-chain = "0.12.1"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
quick-xml = "0.14.0"
