[package]
name = "xar"
version = "0.1.1"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"
description = "A utility and library to create, inspect and extract XAR archives."
documentation = "https://docs.rs/xar"
homepage = "https://github.com/xfbs/xar"
repository = "https://github.com/xfbs/xar"
readme = "README.md"
keywords = ["xar", "compression"]
categories = ["command-line-utilities", "compression", "encoding"]
license = "MIT"

[dependencies]
xml-rs = "0.8.3"
libflate = "1.1.0"
byteorder = "1.4.3"
clap = "2.33.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
quick-xml = "0.22.0"
chrono = "0.4.19"
xmltree = "0.10.3"
thiserror = "1.0.24"
anyhow = "1.0.40"
